# ai-trader

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config.py  main.py  utils.py
src/agent/: agent.py  prompts.py
src/agent/prompt_templates/: ru.j2
src/tools/: calculate.py  news.py  price.py  search.py  trade.py
src/trade/: models.py  utils.py
src/trade/arena/: arena_client.py  models.py
src/trade/finam/: base.py  finam_client.py  models.py
tests/: conftest.py  mock_arena_client.py
tests/agent/: test_prompt.py  test_tools.py
tests/tools/: test_calculate.py  test_news.py  test_price.py  test_search.py  test_trade.py
tests/trade/: test_get_price.py
