[project]
name = "ai-trader"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "httpx[http2]>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.0",
    "pydantic>=2.13.3",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
asyncio_mode = "auto"
